[package]
name = "super-tic-tac-toe"
version = "0.1.0"
description = "A command-line super tic-tac-toe player."
authors = ["David Harkness <dharkness@gmail.com>"]
repository = "https://github.com/dharkness/super-tic-tac-toe"
readme = "README.md"
keywords = ["tic-tac-toe", "game", "cli"]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
